--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ quarkus.langchain4j.ollama.log-requests=true
 quarkus.langchain4j.ollama.timeout=60s    
 # Activate or not the Mistral AI embedding model                      
 quarkus.langchain4j.ollama.embedding-model.enabled=false
-
+# Path to files for RAG mode
+quarkus.langchain4j.easy-rag.path=./src/main/resources/rag/
 ### Chat model configurations
 # Activate or not the Mistral AI chat model
 quarkus.langchain4j.ollama.chat-model.enabled=true              
